--- a/index.html
+++ b/index.html
@@ -2,10 +2,46 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>HaveMyShift</title>
+
+    <style>
+      html, body, * {
+        font-family: 'Open Sans', sans-serif;
+        text-align: center;
+      }
+    </style>
   </head>
 
   <body>
-    <p>This is my web page</p>
+    <div style="margin-top: 50px; margin-left: auto; margin-right: auto; width: 100px;">
+      <img src="logo.png" style="height: 100px;">
+    </div>
+
+    <div style="max-width: 50%; margin: 0 auto;">
+      <h3>
+        Big thanks to everyone who used the service!
+      </h3>
+
+      <p>
+        It was a pleasure building HaveMyShift for you and with you.
+      </p>
+
+      <h3>Thanks for making the project possible!</h3>
+      <ul style="list-style: none; padding: 0;">
+        <li> Sean Corbett </li>
+        <li> Drew Gilliam </li>
+        <li> Randy Janzen </li>
+        <li> Stephen Wooten </li>
+      </ul>
+
+      <p>
+        Your tireless efforts made people's lives easier and helped people better organizer their lives.
+      </p>
+
+      <p>
+        Thanks to those who got inspired by HaveMyShift and went on to make or do something meaningful.
+      </p>
+    </div>
   </body>
 </html>
